# launcher-rust

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  rustfmt.toml
crates/flashpoint/: Cargo.toml
crates/flashpoint-config/: Cargo.toml
crates/flashpoint-config/src/: lib.rs  types.rs
crates/flashpoint-core/: Cargo.toml
crates/flashpoint-core/src/: lib.rs  signals.rs  ws.rs
crates/flashpoint-database/: .env.example  Cargo.toml
crates/flashpoint-database/migrations/2022-12-15-110819_initial/: down.sql  up.sql
crates/flashpoint-database/src/: game.rs  lib.rs  misc.rs  models.rs  playlist.rs  schema.rs  tag.rs  types.rs  ws.rs
crates/flashpoint-gotd-webserver/: .env  .env.example  .eslintrc.json  .gitignore  Cargo.toml  log.txt  package-lock.json  package.json  tsconfig.json  webpack.config.js
crates/flashpoint-gotd-webserver/client/: index.tsx  types.ts
crates/flashpoint-gotd-webserver/client/components/: GameBox.tsx  GotdTable.tsx  Header.tsx  SimpleButton.tsx  SuggestionsTable.tsx  app.tsx
crates/flashpoint-gotd-webserver/client/components/pages/: Gotds.tsx  Home.tsx  Suggestions.tsx
crates/flashpoint-gotd-webserver/public/: index.html  styles.css
crates/flashpoint-gotd-webserver/src/: main.rs  user.rs
crates/flashpoint-macros/: Cargo.toml
crates/flashpoint-macros/src/: lib.rs
crates/flashpoint/src/: main.rs
