[package]
name = "flashpoint-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false

[features]
services = []

[dependencies]
tokio = { version = "1.23.0", features = ["macros", "fs", "io-util", "time"] }
flashpoint-config = { version = "0.1.0", path = "../flashpoint-config" }
serde_json = "1.0.89"
