[package]
name = "flashpoint-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false

[features]
services = []
websocket = []

[dependencies]
tokio = { version = "1.23.0", features = ["macros", "fs", "sync", "io-util", "time"] }
flashpoint-config = { version = "0.1.0", path = "../flashpoint-config" }
serde_json = "1.0.89"
tokio-tungstenite = "*"
futures-channel = "0.3.25"
futures-util = "0.3.25"
ctrlc = "3.2.4"
cfg-if = "1.0.0"
