[package]
name = "flashpoint-database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.89"
libsqlite3-sys = { version = "0.25.2", features = ["bundled"] }
diesel = { version = "2.0.0", features = ["sqlite"] }
dotenv = "0.9.0"
uuid = { version = "0.7", features = ["serde", "v4"] }
chrono = { version = "0.4.23", features = ["serde"] }
