[package]
name = "flashpoint-gotd-webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flashpoint-database = { path = "../flashpoint-database" }
actix-files = "0.6.2"
actix-web = "4.2.1"
colored = "2.0.0"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
actix-identity = "0.5.2"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
reqwest = { version = "0.11.13", features = ["serde_json", "json", "multipart"] }
dotenv = "0.15.0"
serde_urlencoded = "0.7.1"
