[package]
name = "flashpoint-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
# TODO turn off the extra traits once I'm convinced I won't need debug printouts of syn data structures.
syn = {version = "1.0.107", features = ["extra-traits"]}
quote = "1.0.23"
proc-macro2 = "1.0.49"
convert_case = "0.6.0"
